spice-gtk should warn if GL is disabled, and the server is GL only
In bug https://bugzilla.redhat.com/show_bug.cgi?id=1517022, a user was complaining that the display remained black, while qemu had "no gl-draw-done within one second" errors.
It turns out that some build of spice-gtk have GL/EGL disabled, and this is not always obvious.
I think the gl-draw event should be handled instead, for example with a one-time warning dialog.